--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
